# PortableRealTimePolarimeter

./: .gitignore
Documentation/: motor_connect.txt
Documentation/Diagrams/: PCB Board Layout.ai
Documentation/Poster/: beamerthemeconfposter.sty  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.snm  main.tex  sample.bib
Software/Backend/: AD677JNZ.py  ADCController.py  DRV5011ADLPGM.py  create_function.bat  digitalpotentiometer.py  hall_effect.py
Software/Backend/ADCReceiver/: ADCReceiver.py
Software/Backend/Digital Potentiometer/: TwoDigitalPots.py
Software/Backend/PicoSoftware/: serialrecv_test.py
Software/Backend/PicoSoftware/ProcessADC-Pico-UART_Test/: CMakeLists.txt  uart_test.c
Software/Backend/ProcessADC/: CaptureLightIntensity.py  main.py
Software/Backend/ProcessADC-Cython/: CaptureLightIntensity.py  CaptureLightIntensity.pyx  gatherdata.py  main.py  setup.py  spi.c  spi.h  spidev.pxd
Software/Backend/ProcessingTest/: ProcessLightIntensity.py  data.csv
Software/Backend/PythonWrapperTest/: build.bat  function.c  wrapper.py
Software/Backend/PythonWrapperTest2/: func.c  func.pyx  setup.py  wrapper.py
Software/Backend/recv_spi_buffer/: Cargo.toml  build.bat  main.py  pyproject.toml  start.bat
Software/Frontend/InterfaceV1/: EmittingStream.py  Interface.py  Main.py  calculate.py  config.ini  data0.csv  datacollector.py  devices.py  emittingstream.py  gui.py  gui.ui  interface.py  main.py  (+10 more)
Software/Simulation/: PolarimeterSimulation_wfit.asv  PolarimeterSimulation_wfit.m  PolarimeterSimulation_wfit_Goertzel.m  data1.csv
(+26 files in other folders)
